src/main/kubernetes/deployment-v2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rating-service
    app.kubernetes.io/version: v2.0.0
  name: rating-service-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
      app.kubernetes.io/version: v2.0.0
  template:
    metadata:
      labels:
        app: rating-service
        app.kubernetes.io/version: v2.0.0
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/lordofthejars/rating-service:v2.0.0
        imagePullPolicy: Always
        name: rating-service
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
