src/main/kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rating-service
  name: rating
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: rating-service
  type: LoadBalancer
