src/main/kubernetes/virtua-service-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rating
spec:
  hosts:
  - rating
  http:
  - route:
    - destination:
        host: rating
    retries:
      attempts: 2
      perTryTimeout: 5s
      retryOn: 5xx
