src/main/kubernetes/virtual-service-v1-v2-75-25.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rating
spec:
  hosts:
  - rating
  http:
  - route:
    - destination:
        host: rating
        subset: version-v1
      weight: 75
    - destination:
        host: rating
        subset: version-v2
      weight: 25
---
