src/main/kubernetes/virtual-service-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rating
spec:
  hosts:
  - rating
  http:
  - route:
    - destination:
        host: rating
        subset: version-v1
      weight: 100
---
